--- a/generators/layout_files/templates/application_layout.html.erb
+++ b/generators/layout_files/templates/application_layout.html.erb
@@ -10,84 +10,100 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="content-language" content="en" />
 
-<meta name="author" content="Beef (www.wearebeef.co.uk)" />
-<meta name="copyright" content="<%= Time.now.year %>, Beef Ltd" />
+<meta name="author" content="<%= Settings.site_name %> (<%= request.host %>)" />
+<meta name="copyright" content="<%= Time.now.year %>, <%= Settings.site_name %>" />
 
 <meta name="Geo.Country" content="GB" />
 <meta name="Geo.Region" content="GB-BST" />
-<meta name="Geo.Placename" content="Bristol" />
-<meta name="Geo.Position" content="51.4619;-2.593" />
+<meta name="Geo.Placename" content="<%= [Settings.town,Settings.county,Settings.region].reject{|p| p.blank? }.join(', ') %>" />
 
 <!-- eo:meta-tags  -->
-<link rel="Bookmark" href="http://www.wearebeef.co.uk/" title="Beef" />
+<link rel="Bookmark" href="<%= request.host %>" title="<%= Settings.site_name %>" />
 
 <!-- so:stylesheets -->
-<%= stylesheet_link_tag 'wireframe/main', 'wireframe', :media => 'screen,tv,projection' %>
-<!-- replace with 'reset', 'typography', 'layout', 'skin', 'forms' and ad  :cache => "main" when you start styling -->
-<%= stylesheet_link_tag 'wireframe/print', :media=>'print' %>
-<!-- remove with 'wireframe/' when you start styling -->
+<%= stylesheet_link_tag 'reset', 'typography', 'layout', 'skin', 'forms', 'screen', :media => 'screen,tv,projection', :cache => "main" %>
+<%= stylesheet_link_tag 'print', :media=>'print' %>
 <%= stylesheet_link_tag 'mobile', :media=>'handheld' %>
 
-<!--[if lte IE 6]>
-<%= stylesheet_link_tag 'wireframe/ie6', :media=>'screen' %>
-<![endif]-->
-<!--[if lte IE 7]>
-<%= stylesheet_link_tag 'wireframe/ie7', :media=>'screen' %>
-<![endif]-->
-<!-- remove with 'wireframe/' when you start styling -->
+<!--[if lte IE 6]><%= stylesheet_link_tag 'ie6', :media=>'screen' %><![endif]-->
+<!--[if lte IE 7]><%= stylesheet_link_tag 'ie7', :media=>'screen' %><![endif]-->
+
 <!-- eo:stylesheets -->
 
 <!-- so:javascript  -->
-<script src="http://www.google.com/jsapi"></script>
-<script>
-  // Load jQuery
-  google.load("jquery", "1.3.2");
+
+<script src="http://www.google.com/jsapi" type="text/javascript"></script>
+<script type="text/javascript">
+  google.load("jquery", "1.4.1");
   // google.load("swfobject", "2.2");
 </script>
-<%= javascript_include_tag 'application', :cache => 'global' %>
+<%= javascript_include_tag 'cufon-yui', 'Gotham_Medium_500.font', 'application', :cache => 'global' %>
+
 <!-- eo:javascript  -->
 
 <%= yield :header %>
 
 </head>
-<body id="<%= page_id %>" class="<%= page_class %>">
-  <div id="type-b">
-  <!-- so:screen -->
-    <div id="wrap">  
-      <div id="header">
-        <h1 id="site-name"><%= link_to h(Settings.site_name), '/', :id => "logo", :rel => "home" %></h1>
-        <ul id="nav">
-          <li><%= link_to "Page one" %></li>
-          <li><%= link_to "Page two" %></li>
-          <li><%= link_to "Page three" %></li>
-        </ul>
-      </div>
-      <div id="content-wrap">
-    
+<body id="<%= page_id %>" class="<%= page_class %> <%= "comment-#{@comment.commentable.category.permalink}" unless @comment.nil? || @comment.commentable.nil? || @comment.commentable.category.nil?  %>">
+
+  <!-- so:wrap-->
+    <div id="wrap">
+      
+      <!-- so:header -->
+        <div id="header">
+          <h1 id="site-name"><%= link_to h(Settings.site_name), '/', :id => "logo", :rel => "home" %></h1>
+        
+          <!-- so:navigation -->
+            <ul id="nav">
+<% for page in Page.roots.published %>
+				<li id="nav-<%= page.permalink %>"><%= link_to page.title, page_path(page.permalink) %></li>
+<% end %>
+              <li id="nav-article"><%= link_to 'Articles', category_articles_path('flipside') %></li>
+              <li id="nav-contact"><%= link_to "Contact", contact_path() %></li>
+          </ul>
+          <!-- so:navigation -->
+        
+        </div>
+      <!-- eo:header -->
+      
+      <!-- so:content --> 
         <div id="content">
-          <div id="breadcrumb">
-            <%= link_to 'Home', root_path %> / <strong><%= page_title %></strong>
+
+<% unless @page.nil? %>
+          <div id="breadcrumbs">
+            <%= link_to 'Home', root_path %> <%= "/ " unless @page.ancestors.empty? %><%= @page.ancestors.collect{ |a| link_to a.title, page_path(a) }.join(' / ') %> / <strong><%= page_title %></strong>
           </div>
+<% end -%>
+
           <%= flash_messages %>
           <%= yield %>
+        </div>     
+      <!-- eo:content -->
+      
+      <!-- so:footer -->
+        <div id="footer">
+          <%= yield :footer %>
+          <p>
+            <%= Settings.telephone %><br />
+            <a href="mailto:<%= Settings.default_email %>"><%= Settings.default_email %></a>
+          </p>
         </div>
+      <!-- eo:footer -->
+      
+    </div>
+  <!-- en:wrap -->
   
-      </div><!-- en:content-wrap -->
+<!-- so:javascript  -->
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("<%= Settings.google_analytics_web_property_id %>");
+pageTracker._trackPageview();
+} catch(err) {}</script>
+<!-- eo:javascript  -->
 
-      <div id="footer">
-        <%= yield :footer %> 
-        <ul id="footer-nav">
-          <li><%= link_to "Page one" %></li>
-          <li><%= link_to "Page two" %></li>
-          <li><%= link_to "Page three" %></li>
-        </ul>
-        <div class="vcard">
-          &copy; <%= Time.now.year %> <span class="fn org"><%=h Settings.site_name %></span> |
-          <span class="email"><a href="mailto:<%=h Settings.default_email %>" title="e-mail us"><%=h Settings.default_email %></a></span>
-        </div><!-- eo:vcard -->
-      </div><!-- eo:footer -->
-    </div><!-- en:wrap -->
-  </div><!-- en:page-type -->
 </body>
 </html>
-
