--- a/generators/layout_files/templates/application_layout.html.erb
+++ b/generators/layout_files/templates/application_layout.html.erb
@@ -55,7 +55,7 @@
         
           <!-- so:navigation -->
             <ul id="nav">
-<% for page in Page.roots.published %>
+<% for page in Page.top.published %>
 				<li id="nav-<%= page.permalink %>"><%= link_to page.title, page_path(page.permalink) %></li>
 <% end %>
               <li id="nav-article"><%= link_to 'Articles', category_articles_path('flipside') %></li>
