--- a/generators/layout_files/templates/application_layout.html.erb
+++ b/generators/layout_files/templates/application_layout.html.erb
@@ -58,7 +58,7 @@
 <% for page in Page.top.published %>
 				<li id="nav-<%= page.permalink %>"><%= link_to page.title, page_path(page.permalink) %></li>
 <% end %>
-              <li id="nav-article"><%= link_to 'Articles', category_articles_path('flipside') %></li>
+              <li id="nav-article"><%= link_to 'Articles', articles_path() %></li>
           </ul>
           <!-- so:navigation -->
         
