--- a/generators/layout_files/templates/application_layout.html.erb
+++ b/generators/layout_files/templates/application_layout.html.erb
@@ -10,7 +10,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="content-language" content="en" />
 
-<meta name="author" content="<%= Settings.site_name %> (<%= request.host %>)" />
+<meta name="author" content="Beef (www.wearebeef.co.uk)" />
 <meta name="copyright" content="<%= Time.now.year %>, <%= Settings.site_name %>" />
 
 <meta name="Geo.Country" content="GB" />
