changed css locations around a little

--- a/generators/layout_files/templates/application_layout.html.erb
+++ b/generators/layout_files/templates/application_layout.html.erb
@@ -21,7 +21,7 @@
 <link rel="Bookmark" href="<%= request.host %>" title="<%= Settings.site_name %>" />
 
 <!-- so:stylesheets -->
-<%= stylesheet_link_tag 'reset', 'typography', 'layout', 'skin', 'forms', 'screen', :media => 'screen,tv,projection', :cache => "main" %>
+<%= stylesheet_link_tag 'reset', 'typography', 'layout', 'skin', 'forms', :media => 'screen,tv,projection', :cache => "screen" %>
 <%= stylesheet_link_tag 'print', :media=>'print' %>
 <%= stylesheet_link_tag 'mobile', :media=>'handheld' %>
 
