--- a/generators/layout_files/templates/public/stylesheets/skin.css
+++ b/generators/layout_files/templates/public/stylesheets/skin.css
@@ -9,10 +9,34 @@ body {
 }
 
 /* so:header */
+#header { background: #2b618e; }
+#header h1 a { color: #d3e6f6; }
+#header ul li a { color: #d3e6f6; }
+#banner {
+  background: #333333;
+  color: white;
+}
 /* eo:header */
 
 /* so:footer */
+#footer {
+  background: #333333;
+  color: white;
+}
+#footer a { color: #d3e6f6; }
+#footer a:hover { background: #2b618e; }
 /* eo:footer */
+
+
+#content h1 { color: #2b618e; }
+#content h2 { color: #2b618e; }
+#supporting-content ul li a { color: #2b618e; }
+#supporting-content ul li a:hover {
+  background: #2b618e;
+  color: #d3e6f6;
+}
+#main-content a img { border: 5px solid white; }
+#main-content a:hover img { border: 5px solid #d3e6f6; }
 
 /* so:links */
 
@@ -58,6 +82,7 @@ a:hover {text-decoration: underline;}
 }
 
 /* eo:image-replacement */
+
 
 /* so:wireframes -- DELETE AT START OF NEW PROJECT -- */	
 
